add default parameters in new api of swagger
