# backend/internal/controller/monitor_controller.go
@@ -250,8 +250,8 @@ type TopPathsRequest struct {
 // @Tags Monitor
 // @Produce json
 // @Security BearerAuth
-// @Param start_time query string true "Start Time" example(2026-03-19 00:00:00)
-// @Param end_time query string true "End Time" example(2026-03-20 00:00:00)
+// @Param start_time query string true "Start Time" default(2026-03-19 00:00:00)
+// @Param end_time query string true "End Time" default(2026-03-20 00:00:00)
 // @Param source_id query string false "Log File or Source ID"
 // @Param limit query int false "Number of top paths to return (default 10, max 100)" default(10)
 // @Success 200 {object} TopPathsResponseWrapper
